--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <p class="p">hello world</p>
+    <form>
+        <input type="text" name="login" id="login">
+        <input type="text" name="password" id="password">
+        <input type="submit" value="connexion">
+    </form>
 </body>
 </html>
